# freeway-neural-network

./: PROJECT_UML.md  debug_viewer.py  graphics.py  human_play.py  main.py  nn_play.py  preprocess_test.py  pyproject.toml  run_training.py  test.py  utils.py
config/: config.py  config.yaml
env/: action_space.py  freeway_env.py
neuralnet/: dqn.py  dqn_player.py  dqn_trainer.py  train.py
utils/: config_utils.py  preprocessing.py
